# auth-rust-rocket

./: Cargo.toml  Rocket-example.toml  rust-auth.pg.sql
src/: handlers.rs  main.rs
